--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,15 @@
     /* option 2: #006ACD; */
     --accent-theme-color: #8FC9FF;
 }
+
+nav {
+    background-color: var(--primary-theme-color);
+}
+
+#jumbotron-section {
+    height: 560px;
+    background-image: url("../img/auto-shop-3.jpg");
+    background-size: cover;
+    background-position: center center;
+    
+}
