--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
     --accent-theme-color: #8FC9FF;
 }
 
-nav {
+nav, footer {
     background-color: var(--primary-theme-color);
 }
 
@@ -15,4 +15,16 @@ nav {
     background-size: cover;
     background-position: center center;
     
+}
+main {
+    margin: 5.5rem 0;
+}
+
+.heading-theme-color {
+    color: var(--primary-theme-color);
+    border-color: var(--primary-theme-color) !important;
+}
+
+section {
+    margin: 6rem 0;
 }
